# InfiniTrain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindNCCL.cmake
example/common/: tiny_shakespeare_dataset.cc  tokenizer.cc  tokenizer.h  utils.cc  utils.h
example/gpt2/: dataset.cc  dataset.h  main.cc  net.cc  net.h  tokenizer.cc  tokenizer.h
example/gpt2/tokenizer/: my_novel.txt  test_gen_bin.cc  tokenizer.cc  tokenizer.h
example/gpt2_tp/: main.cc  net.cc  net.h
example/llama3/: dataset.cc  main.cc  net.cc  net.h
example/mlp_tp/: main.cc  net.cc  net.h
example/mnist/: dataset.cc  dataset.h  main.cc  net.cc  net.h
infini_train/include/: autocast.h  checkpoint.h  dataloader.h  dataset.h  datatype.h  device.h  dispatcher.h  network.h  op.h  ops.h  optimizer.h  profiler.h  tensor.h
infini_train/include/autograd/: accumulate.h  activations.h  comm.h  elementwise.h  embedding.h  function.h  function_hook.h  fused_embedding.h  grad_mode.h  layernorm.h  linear.h  loss.h  matmul.h  misc.h  normalization.h  outer.h  reduction.h  softmax.h  sparse.h  transform.h
infini_train/include/common/: common.h
infini_train/include/common/cpu/: common_cpu.h
infini_train/include/common/cuda/: common_cuda.cuh  common_cuda.h  kernel_helper.cuh
infini_train/include/kernels/cpu/: accumulate_grad.h  cross_entropy.h  elementwise.h  embedding.h  fused_embedding.h  layernorm.h  linear.h  linear_with_bias.h  no_op.h  outer.h  reduction.h  sigmoid.h  slice.h  softmax.h  split.h  stack.h  transform.h
infini_train/include/kernels/cuda/: accumulate_grad.h  cross_entropy.h  elementwise.h  embedding.h  fused_embedding.h  layernorm.h  linear.h  no_op.h  outer.h  reduction.h  sigmoid.h  slice.h  softmax.h  split.h  stack.h  transform.h
infini_train/include/nn/: activations.h  container.h  functional.h  init.h  linear.h  loss.h  network.h  parallel_functional.h
infini_train/include/nn/modules/: activations.h  container.h  embedding.h  fused_embedding.h  layernorm.h  linear.h  loss.h  module.h  normalization.h  sparse.h
infini_train/include/nn/parallel/: data_parallel.h  distributed_data_parallel.h  parallel_functional.h  reduce_op_type.h  tensor_parallel.h
infini_train/include/nn/parallel/pp/: pipeline_parallel.h  pipeline_schedule.h  pipeline_stage.h
infini_train/src/: checkpoint.cc  cuda_ops.cu  dataloader.cc  device.cc  network.cc  op.cc  ops.cc  optimizer.cc  profiler.cc  tensor.cc
infini_train/src/autograd/: accumulate.cc  activations.cc  comm.cc  elementwise.cc  embedding.cc  function.cc  function_hook.cc  fused_embedding.cc  grad_mode.cc  layernorm.cc  linear.cc  loss.cc  matmul.cc  misc.cc  normalization.cc  outer.cc  reduction.cc  softmax.cc  sparse.cc  transform.cc
infini_train/src/kernels/cpu/: accumulate_grad.cc  cast.cc  concat.cc  cross_entropy.cc  elementwise.cc  embedding.cc  fill.cc  fused_embedding.cc  gather.cc  layernorm.cc  linear.cc  linear_with_bias.cc  mse.cc  no_op.cc  outer.cc  reduction.cc  sigmoid.cc  slice.cc  softmax.cc  split.cc  stack.cc  transform.cc
infini_train/src/kernels/cuda/: accumulate_grad.cu  cast.cu  comm.cu  comm_nccl.cu  concat.cu  cross_entropy.cu  elementwise.cu  embedding.cu  fill.cu  fused_embedding.cu  gather.cu  layernorm.cu  linear.cu  mse.cu  no_op.cu  outer.cu  reduction.cu  sigmoid.cu  slice.cu  softmax.cu  split.cu  stack.cu  transform.cu  vocab_parallel_cross_entropy.cu
infini_train/src/nn/: activations.cc  container.cc  functional.cc  init.cc  linear.cc  loss.cc  network.cc  parallel_functional.cc
infini_train/src/nn/modules/: container.cc  embedding.cc  fused_embedding.cc  layernorm.cc  linear.cc  loss.cc  module.cc  normalization.cc  sparse.cc
infini_train/src/nn/parallel/: data_parallel.cc  distributed_data_parallel.cc  parallel_functional.cc  replicate.cc  scatter_gather.cc  scatter_gather.h  tensor_parallel.cc
infini_train/src/nn/parallel/pp/: pipeline_parallel.cc  pipeline_schedule.cc  pipeline_stage.cc  send_recv.cc  send_recv.h
scripts/: run_models_and_profile.bash  write_to_feishu_sheet.py
